--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,53 +109,53 @@ jobs:
           generate_release_notes: true
           token: ${{ secrets.RELEASE_TOKEN }}
 
-      - name: publish to curseforge and modrinth
-        if: github.event.ref == 'refs/heads/stable'
-        uses:  Kir-Antipov/mc-publish@v3.3                                   
-        with:
-          curseforge-id: 123456                                             
-          curseforge-token: "${{ secrets.CURSEFORGE_TOKEN }}"
-          
-          modrinth-id: 1q2w3e4r                                             
-          modrinth-token: "${{ secrets.MODRINTH_TOKEN }}"
-
-          files: |
-            build/libs/*.jar
+#      - name: publish to curseforge and modrinth
+#        if: github.event.ref == 'refs/heads/stable'
+#        uses:  Kir-Antipov/mc-publish@v3.3                                   
+#        with:
+#          curseforge-id: 123456                                             
+#          curseforge-token: "${{ secrets.CURSEFORGE_TOKEN }}"
+#          
+#          modrinth-id: 1q2w3e4r                                             
+#          modrinth-token: "${{ secrets.MODRINTH_TOKEN }}"
+#
+#          files: |
+#            build/libs/*.jar
 #            versions/*/build/libs/*.jar
-
-          name: "${{ steps.mod_info.outputs.mod_version }} for ${{ steps.mod_info.outputs.mc_version }}"                             
-          version: "${{ steps.mod_info.outputs.mc_version }}-${{ steps.mod_info.outputs.mod_version }}"
-          version-type: release
-          
-          changelog: |
-            **This version is automatically released by GitHub Actions**
-            
-            Recent commits:
-            ${{ github.event.commits.message }}
-
-          loaders: |
-            fabric
-            quilt
-          game-versions: |
-            >=1.20 <1.21
-          java: |
-            8
-            9
-            10
-            11
-            12
-            13
-            14
-            15
-            16
-            17
-            18
-            19
-            20
-            21
-          dependencies: |
-            fabric(required){modrinth:P7dR8mSH}{curseforge:306612}
-          
-          retry-attempts: 2
-          retry-delay: 10000
-          fail-mode: skip
+#
+#          name: "${{ steps.mod_info.outputs.mod_version }} for ${{ steps.mod_info.outputs.mc_version }}"                             
+#          version: "${{ steps.mod_info.outputs.mc_version }}-${{ steps.mod_info.outputs.mod_version }}"
+#          version-type: release
+#          
+#          changelog: |
+#            **This version is automatically released by GitHub Actions**
+#            
+#            Recent commits:
+#            ${{ github.event.commits.message }}
+#
+#          loaders: |
+#            fabric
+#            quilt
+#          game-versions: |
+#            >=1.20 <1.21
+#          java: |
+#            8
+#            9
+#            10
+#            11
+#            12
+#            13
+#            14
+#            15
+#            16
+#            17
+#            18
+#            19
+#            20
+#            21
+#          dependencies: |
+#            fabric(required){modrinth:P7dR8mSH}{curseforge:306612}
+#          
+#          retry-attempts: 2
+#          retry-delay: 10000
+#          fail-mode: skip
